# youtube-viewcount-logger-rust

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  __title__.sql  build.rs  data.duckdb.zst  date.txt  gemini-cache.json  instagram_follower.ts  instagram_user.list  misc.duckdb.zst  playlists_build.sql  render_graph.ts  render_group_report.ts  sqlite2duckdb.script
.github/workflows/: add_source.yml  build.yml  compile.yml  daily.yml  deno_docker.yml  instagram_scraper.yml  migrate.yml  recompress.yml  test.yml  twitter_media_upload_test.yml  update_cargo.yml  update_morning_musume.yml  xdk_tweet_test.yml
assets/: graph_query.sql  max_daily_viewcount.sql  template.typ  tweet_query.sql  typst_table_query.sql
deploy/: Dockerfile  entrypoint.sh  entrypoint_instagram.sh  entrypoint_release.sh  entrypoint_tweet.sh  entrypoint_youtube.sh
instagram/: Dockerfile  instagram_follower.ts
outdated_script/: gen_ranktext.py  graph.py  instagram_monitor.py  instagram_scraper.yml  main.py  misc.py  ranking.py  render_graph.py  tweet_post.py
outdated_script/instagram/: Dockerfile  instagram_follower.ts
scripts/: test_twitter_media_upload.ts  test_xdk_tweet.ts
src/: lib.rs  main.rs
viewcount-logger-web/: .gitignore  package.json
viewcount-logger-web/src/routes/: +page.svelte
