[package]
name = "youtube-viewcount-logger-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "*", features = ["sqlite", "runtime-tokio", "default", "chrono", "runtime-tokio-native-tls"] }
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "*", features = ["json"] }
url = { version = "*" }
once_cell = { version = "*" }
serde_json = { version = "*" }
serde = { version = "*" }
anyhow = { version = "*" }
#google-generative-ai-rs = { version = "*", features = ["beta"] }
futures = { version = "*" }
duckdb = { version = "*", features = ["bundled", "parquet"] }
chrono = { version = "*" }
cron = { version = "*" }


[profile.relwithdebinfo]
inherits = "release"
debug = true
incremental = true
lto = true
opt-level = 2
